--- a/src/components/css/Nav.css
+++ b/src/components/css/Nav.css
@@ -21,7 +21,7 @@ header{
 }
 
 .header{
-    width: 98%;
+    width: 100%;
     margin: auto;
     display: flex;
     justify-content: space-between;
@@ -29,10 +29,12 @@ header{
 }
 
 .headerfull{
-    width: 98%;
+    width: 100%;
     margin: auto;
     display: flex;
     justify-content: space-between;
+    background-color: #F7008C;
+    transition: all 2s ease-in-out;
 }
 
 .navbar{
@@ -49,7 +51,7 @@ header{
     width: 100%;
     height: 100%;
     position: fixed;
-    background-color: #F7008C;
+    background-color: #fff;
     z-index: 999;
     transition: all 0.8s ease-in-out;
     padding-bottom: 40px;
@@ -59,7 +61,7 @@ header{
     width: 100%;
     height: 100%;
     position: fixed;
-    background-color: #F7008C;
+    background-color: #fff;
     transition: all 0.8s ease-in-out;
     z-index: 999;
 }
@@ -104,10 +106,10 @@ header{
     font-weight: bold;
     font-size: 51px;
     line-height: 60px;
-    color: #202020 !important;
+    color: #F7008C !important;
     padding-top: 40px;
     padding-bottom: 0;
-    opacity: 0.55;
+    /* opacity: 0.55; */
     padding-left: 10px;
     text-transform: capitalize;
 }
@@ -118,9 +120,9 @@ header{
     font-weight: bold;
     font-size: 51px;
     line-height: 60px;
-    color: #202020;
+    color: #F7008C;
     padding-top: 40px;
-    opacity: 0.55;
+    /* opacity: 0.55; */
     padding-bottom: 0;
     padding-left: 12.5% !important;
     text-transform: capitalize;
