--- a/src/home/css/about.css
+++ b/src/home/css/about.css
@@ -161,7 +161,7 @@
 }
 
 .slidercover {
-  width: 280px;
+  width: fit-content;
   margin-top: -20px !important;
   background-color: white;
   display: flex;
@@ -174,7 +174,8 @@
   width: 95%;
   display: flex;
   flex-flow: column;
-  padding-left: 20px;
+  /* padding-left: 20px; */
+  padding: 10px;
 }
 
 .sliderheading {
@@ -201,11 +202,13 @@
 .sliderbtn {
   background-color: black !important;
   border: 1px solid black !important;
-  padding-left: 25.6px;
+  /* padding-left: 25.6px;
   padding-right: 25.6px;
   padding-top: 12.8px;
-  padding-bottom: 12.8px;
+  padding-bottom: 12.8px; */
+  padding: 12.8px 25.6px;
   border-radius: 50px;
+  white-space: nowrap;
   width: fit-content;
   cursor: pointer;
   font-family: "Cabin", sans-serif;
