--- a/src/home/css/Intro.css
+++ b/src/home/css/Intro.css
@@ -51,7 +51,7 @@
 
 .para {
   color: rgb(135, 135, 135);
-  font-size: 3em;
+  font-size: 2.5em;
   text-align: start;
   text-transform: uppercase;
   font-family: "Cabin", sans-serif;
@@ -153,6 +153,7 @@ button {
   text-transform: uppercase;
   color: rgb(135, 135, 135);
   margin-bottom: 5px;
+  white-space: nowrap;
 }
 
 .mobbtn:hover {
